---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1100                                 -
---------------------------------------------
- 2021-08-16                                -
---------------------------------------------
.: WSM: Task - Using session to commit multiple collection update (WSM-421)

- v1.0.10944                                -
---------------------------------------------
- 2021-08-03                                -
---------------------------------------------
.: WSM: Task - Activate user with correct url (WSM-410)

---------------------------------------------
- 2021-07-31                                -
---------------------------------------------
.: WSM: Task - Review Module (WSM-413)

---------------------------------------------
- 2021-07-22                                -
---------------------------------------------
.: WSM: Task - Notify user when add as contributor (WSM-420)

---------------------------------------------
- 2021-07-21                                -
---------------------------------------------
.: WSM: Task - Able to edit message (WSM-410)

---------------------------------------------
- 2021-07-20                                -
---------------------------------------------
.: WSM: Task - Add message note before send to merchant (WSM-410)
.: WSM: Task - Display New Products Category (WSM-404)
.: WSM: Task - No category when creating product (WSM-381)

- v1.0.10943                                -
---------------------------------------------
- 2021-07-18                                -
---------------------------------------------
.: WSM: Task - Send an email to notify once order has been approved by merchant (CMS3-397)
.: WSM: Task - Add free delivery confirmation (WSM-418)

---------------------------------------------
- 2021-07-14                                -
---------------------------------------------