@@ -38,7 +38,8 @@
             </div>
           </div>
           <div class="row no-gutters">
-            <button class="btn btn-sm btn-controller" type="button" (click)="navigateToChangePlan()" (click)="navigateToChangePlan()">Previous</button>
+            <!-- temp remove package -->
+            <!-- <button class="btn btn-sm btn-controller" type="button" (click)="navigateToChangePlan()">Previous</button> -->
             <button class="btn btn-sm btn-controller" type="button" style="margin-left: auto" (click)="next()">Next</button>
           </div>
         </form>
