@@ -8,9 +8,10 @@
                 <li class="nav-item">
                     <a target="_blank" [href]="environment.URL" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item">
+                <!-- temp remove package -->
+                <!-- <li class="nav-item">
                     <a [routerLink]="['/price']" class="nav-link">Price</a>
-                </li>
+                </li> -->
                 <li *ngIf="user" class="nav-item">
                     <a [routerLink]="['/stores']" class="nav-link">All Stores</a>
                 </li>
